[tool.poetry]
name = "gitlab-mirror-maker"
version = "0.4.1"
description = "Automatically mirror your repositories from GitLab to GitHub"
authors = ["Grzegorz Dlugoszewski <pypi@grdl.dev>"]
maintainers = ["Grzegorz Dlugoszewski <pypi@grdl.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/grdl/gitlab-mirror-maker"
keywords = ["gitlab", "github"]


packages = [
    { include = "mirrormaker" }
]

[tool.poetry.scripts]
gitlab-mirror-maker = "mirrormaker.mirrormaker:mirrormaker"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
click = "^7.1.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.1"
responses = "^0.10.12"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
